<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/clientIDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:text="@string/clientID"
            />

        <EditText
            android:id="@+id/clientId"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/clientHint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/serverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dip"
            android:text="@string/server"
            />

        <EditText
            android:id="@+id/serverURI"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:hint="@string/serverURIHint"
            android:inputType="textUri"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/portTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dip"
            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/portHint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/subTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dip"
            android:text="@string/sub" />

        <EditText
            android:id="@+id/sub"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/topicHint"/>
    </LinearLayout>

    <Button
        android:theme="@style/AppTheme.ButtonBord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_newConnection"
        android:text="@string/button_connection"
        android:layout_gravity="center"/>
    <Button
        android:theme="@style/AppTheme.ButtonBordCol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_disconnect"
        android:text="@string/button_disconnect"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_connection"
        android:textSize="16sp"/>


</LinearLayout>